--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
