--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,8 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^7.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   }
 }
