--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "connect-mongo": "^5.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
